:art: fikset bug med z-index

--- a/frontend/mr-admin-flate/src/components/skjema/SokeSelect.module.scss
+++ b/frontend/mr-admin-flate/src/components/skjema/SokeSelect.module.scss
@@ -1,7 +1,3 @@
-.sokeselect {
-  z-index: 100;
-}
-
 .label {
   margin-bottom: 8px;
   display: inline-block;
@@ -9,5 +5,5 @@
 
 .errormsg {
   margin-top: 8px;
-  color: #C30000;
+  color: #c30000;
 }
